tests/errors/string_membership_left_operand.py
# expect_error: TypeError
# expect_error: 'in <string>' requires string as left operand
print(1 in 'abc')